<resources>
    <string name="app_name">TriangularLake</string>
    <string name="area">Area</string>
    <string name="sectors">sectors</string>
    <string name="sector">sector</string>
    <string name="sector_upper">SECTOR</string>
    <string name="on_categories">on categories</string>
    <string name="description_upper">DESCRIPTION</string>
    <string name="stones_upper">STONES</string>
    <string name="look_on_map_upper">LOOK ON A MAP</string>
    <string name="lietlahti">Lietlahti</string>
    <string name="triangular_lake">Triangular lake</string>
    <string name="error">Error</string>
    <string name="map_upper">MAP</string>
    <string name="detailed">Detailed</string>
    <string name="danger">Danger</string>
    <string name="insurance">Insurance</string>
    <string name="addition">Addition</string>
    <string name="area_upper">AREA</string>

    <!--боковое меню-->
    <string name="favorites_upper">FAVORITES</string>
    <string name="filter_routes_upper">FILTER OF ROUTES</string>
    <string name="search_upper">SEARCH</string>
    <string name="information">Information</string>
    <string name="guidebook_lower">guidebook</string>
    <string name="navigation_menu_open">Navigation menu is open</string>
    <string name="navigation_menu_close">Navigation menu is close</string>

</resources>
