<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dp">

    <TextView
        android:id="@+id/problems_children_ll_danger"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/danger"
        android:textColor="@color/text_main"/>

    <TextView
        android:id="@+id/problems_children_ll_insurance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/insurance"
        android:textColor="@color/text_main"/>

    <TextView
        android:id="@+id/problems_children_ll_addition"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/addition"
        android:textColor="@color/text_main"/>

</LinearLayout>